<resources>
    <string name="app_name">Stay Tuned</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="title_activity_main">Stay Tuned</string>

    <string name="connection_failure">Unable to connect. Please check you connection and retry!
    </string>
    <string name="channel_list_empty">Please select at least 1 channel to show programme
        listings from.</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_filter">Filter</string>
    <string name="action_channel_filter">Filter by Channels</string>
    <string name="action_imdb_rating">Filter by IMDb Rating</string>

    <string name="action_refresh">Refresh</string>

    <!-- IMDB -->
    <string name="actors_label">Actors:</string>
    <string name="directors_label">Directors:</string>
    <string name="user_rating">User Rating:</string>
    <string name="subscribe">Notify Me</string>

    <!-- General -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- Category title to show -->
    <string name="title_movies">Movies</string>
    <string name="title_entertainment">Entertainment</string>
    <string name="title_sports">Sports</string>
    <string name="title_kids">Kids</string>
    <string name="title_lifestyle">Lifestyle</string>
    <string name="title_music">Music</string>
    <string name="title_news">News</string>
    <string name="title_documentary">Documentary</string>
    <string name="title_religious">Religious</string>

    <!-- FiltersDialogFragment -->
    <string name="channel_filter">Channel Filter</string>
    <string name="reminder_filter">Remind me before:</string>

    <string-array name="duration_array">
        <item>5 min</item>
        <item>15 min</item>
        <item>1 hour</item>
        <item>3 hour</item>
    </string-array>

    <string name="notification_failure">Set notification failed.</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
